--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="carousel">
       <!-- <button class="carousel-btn prev" onclick="moveSlide(-1)">❮</button> -->
       <div class="carousel-images">
-        <img src="image/CH1.JPG" class="carousel-slide active" alt="View 1">
-        <img src="image/IMG1.jpg" class="carousel-slide" alt="View 2">
+        <img src="image/IMG15.jpg" class="carousel-slide active" alt="View 1">
+        <img src="image/IMG2.jpg" class="carousel-slide" alt="View 2">
         <img src="image/IMG11.jpg" class="carousel-slide" alt="View 3">
       </div>
       <!-- <button class="carousel-btn next" onclick="moveSlide(1)">❯</button> -->
