--- a/index.html
+++ b/index.html
@@ -528,20 +528,6 @@
   <button onclick="openBulkOrderForm()">📦 Bulk Order Enquiry</button>
 </section>
 
-  <!-- Map Section -->
-<section class="map-section">
-  <h2>Our Location</h2>
-  <div class="map-container">
-    <iframe 
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3500.9774825462973!2d77.10087767407666!3d28.66039288281752!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d03549fc3869d%3A0x40f89a3dc747a7cc!2sKaushik%20Mart!5e0!3m2!1sen!2sin!4v1751040667586!5m2!1sen!2sin"
-      style="border:0;" 
-      allowfullscreen="" 
-      loading="lazy" 
-      referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
-  </div>
-</section>
-
   <!-- About Us Section -->
   <section class="about-us-section" id="about">
   <div class="about-content">
@@ -558,7 +544,21 @@
   </div>
 </section>
 
-<!-- About Us Section -->
+  <!-- Map Section -->
+<section class="map-section">
+  <h2>Our Location</h2>
+  <div class="map-container">
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3500.9774825462973!2d77.10087767407666!3d28.66039288281752!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d03549fc3869d%3A0x40f89a3dc747a7cc!2sKaushik%20Mart!5e0!3m2!1sen!2sin!4v1751040667586!5m2!1sen!2sin"
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy" 
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+</section>
+
+<!-- Contact Us Section -->
 <section class="contact-section" id="contact">
   <div class="contact-container">
     <h2>Contact Us</h2>
