--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Nav Section -->
 <nav class="navbar">
   <div class="navbar-left">
-    <span class="logo">Drona Electronics</span>
+    <span class="logo"><span style="color: rgb(221, 92, 92);">Drona</span> Electronics</span>
   </div>
 
   <div class="navbar-right">
@@ -62,7 +62,7 @@
             ontouchmove="touchMove(event, this)" 
             ontouchend="touchEnd(this)">     
           <img src="image/CH1.JPG" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
-          <img src="image/IMG2.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/IMG6.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
           <img src="image/IMG3.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
           <!-- Dot indicators -->
           <div class="dot-container">
@@ -84,9 +84,9 @@
             ontouchstart="touchStart(event, this)" 
             ontouchmove="touchMove(event, this)" 
             ontouchend="touchEnd(this)">     
-          <img src="image/IMG1.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
-          <img src="image/IMG2.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/ShivChantingbox.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
           <img src="image/IMG3.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/IMG6.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
           <!-- Dot indicators -->
           <div class="dot-container">
             <span class="dot active-dot"></span>
@@ -95,11 +95,11 @@
           </div>
         </div>
         <div class="product-details">
-          <p class="product-name">Chanting Box With Lighting Photo (35 Mantra)</p>
+          <p class="product-name">Lord Shiva Chanting Box With Lighting Photo</p>
           <p class="product-price">Price = ₹299/Piece</p>
           <p class="product-meta">Material: Plastic</p>
           <p class="product-meta">35 Mantra</p>
-          <button class="buy-now-button" onclick="openBuyForm('Lamps With Mantra Sound')">Get Best Price</button>
+          <button class="buy-now-button" onclick="openBuyForm('Lord Shiva Chanting Box With Lighting Photo')">Get Best Price</button>
         </div>
       </div>
       <div class="gallery-item">
@@ -107,9 +107,9 @@
             ontouchstart="touchStart(event, this)" 
             ontouchmove="touchMove(event, this)" 
             ontouchend="touchEnd(this)">     
-          <img src="image/IMG1.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
-          <img src="image/IMG2.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
-          <img src="image/IMG3.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/premanand-mantra-chanting-box 4.jpeg.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
+          <img src="image/IMG6.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/premanand-mantra-chanting-box 4.jpeg.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
           <!-- Dot indicators -->
           <div class="dot-container">
             <span class="dot active-dot"></span>
@@ -118,11 +118,11 @@
           </div>
         </div>
         <div class="product-details">
-          <p class="product-name">Lamps With Mantra Sound</p>
+          <p class="product-name">Premanand jee With Mantra Sound</p>
           <p class="product-price">Price = ₹249/Piece</p>
-          <p class="product-meta">Material: Ceramic</p>
-          <p class="product-meta">Size: 8/9/8</p>
-          <button class="buy-now-button" onclick="openBuyForm('Lamps With Mantra Sound')">Get Best Price</button>
+          <p class="product-meta">Material: Plastic</p>
+          <p class="product-meta">14 Mantra</p>
+          <button class="buy-now-button" onclick="openBuyForm('Premanand jee With 14 Mantra Sound')">Get Best Price</button>
         </div>
       </div>
       <div class="gallery-item">
@@ -130,9 +130,9 @@
             ontouchstart="touchStart(event, this)" 
             ontouchmove="touchMove(event, this)" 
             ontouchend="touchEnd(this)">     
-          <img src="image/IMG1.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
-          <img src="image/IMG2.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
-          <img src="image/IMG3.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/buddha-mantra-chanting-box1.jpeg.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
+          <img src="image/IMG6.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/buddha-mantra-chanting-box1.jpeg.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
           <!-- Dot indicators -->
           <div class="dot-container">
             <span class="dot active-dot"></span>
@@ -141,11 +141,11 @@
           </div>
         </div>
         <div class="product-details">
-          <p class="product-name">Lamps With Mantra Sound</p>
+          <p class="product-name">Buddha Mantra Chanting Box</p>
           <p class="product-price">Price = ₹249/Piece</p>
-          <p class="product-meta">Material: Ceramic</p>
-          <p class="product-meta">Size: 8/9/8</p>
-          <button class="buy-now-button" onclick="openBuyForm('Lamps With Mantra Sound')">Get Best Price</button>
+          <p class="product-meta">Material: Plastic</p>
+          <p class="product-meta">14 Mantra</p>
+          <button class="buy-now-button" onclick="openBuyForm('Buddha Mantra Chanting Box')">Get Best Price</button>
         </div>
       </div>
       <div class="gallery-item">
@@ -153,9 +153,9 @@
             ontouchstart="touchStart(event, this)" 
             ontouchmove="touchMove(event, this)" 
             ontouchend="touchEnd(this)">     
-          <img src="image/IMG1.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
-          <img src="image/IMG2.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
-          <img src="image/IMG3.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/ram-darbar-mantra-chanting-box 6.jpeg.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
+          <img src="image/IMG6.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/IMG10.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
           <!-- Dot indicators -->
           <div class="dot-container">
             <span class="dot active-dot"></span>
@@ -164,11 +164,11 @@
           </div>
         </div>
         <div class="product-details">
-          <p class="product-name">Lamps With Mantra Sound</p>
+          <p class="product-name">Ram Darbar Mantra Chanting Box</p>
           <p class="product-price">Price = ₹249/Piece</p>
-          <p class="product-meta">Material: Ceramic</p>
-          <p class="product-meta">Size: 8/9/8</p>
-          <button class="buy-now-button" onclick="openBuyForm('Lamps With Mantra Sound')">Get Best Price</button>
+          <p class="product-meta">Material: Plastic</p>
+          <p class="product-meta">14/35 Mantra</p>
+          <button class="buy-now-button" onclick="openBuyForm('Ram Darbar Mantra Chanting Box')">Get Best Price</button>
         </div>
       </div>
       <div class="gallery-item">
@@ -176,9 +176,9 @@
             ontouchstart="touchStart(event, this)" 
             ontouchmove="touchMove(event, this)" 
             ontouchend="touchEnd(this)">     
-          <img src="image/IMG1.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
-          <img src="image/IMG2.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
-          <img src="image/IMG3.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/VR-201557969-socket 2.jpeg.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
+          <img src="image/IMG6.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/VR-201557969-socket 2.jpeg.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
           <!-- Dot indicators -->
           <div class="dot-container">
             <span class="dot active-dot"></span>
@@ -187,11 +187,11 @@
           </div>
         </div>
         <div class="product-details">
-          <p class="product-name">Lamps With Mantra Sound</p>
+          <p class="product-name">Guru Nanak & Guru Gobind Ji Mantra Chanting Box</p>
           <p class="product-price">Price = ₹249/Piece</p>
-          <p class="product-meta">Material: Ceramic</p>
-          <p class="product-meta">Size: 8/9/8</p>
-          <button class="buy-now-button" onclick="openBuyForm('Lamps With Mantra Sound')">Get Best Price</button>
+          <p class="product-meta">Material: Plastic</p>
+          <p class="product-meta">14 Mantra</p>
+          <button class="buy-now-button" onclick="openBuyForm('Guru Nanak & Guru Gobind Ji Mantra Sound')">Get Best Price</button>
         </div>
       </div>
       <div class="gallery-item">
@@ -199,9 +199,9 @@
             ontouchstart="touchStart(event, this)" 
             ontouchmove="touchMove(event, this)" 
             ontouchend="touchEnd(this)">     
-          <img src="image/IMG1.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
-          <img src="image/IMG2.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
-          <img src="image/IMG3.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/WE-201557969-light 3.jpeg.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
+          <img src="image/IMG6.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/WE-201557969-light 3.jpeg.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
           <!-- Dot indicators -->
           <div class="dot-container">
             <span class="dot active-dot"></span>
@@ -210,11 +210,11 @@
           </div>
         </div>
         <div class="product-details">
-          <p class="product-name">Lamps With Mantra Sound</p>
+          <p class="product-name">Khatu Shayam Ji Mantra Chanting Box</p>
           <p class="product-price">Price = ₹249/Piece</p>
-          <p class="product-meta">Material: Ceramic</p>
-          <p class="product-meta">Size: 8/9/8</p>
-          <button class="buy-now-button" onclick="openBuyForm('Lamps With Mantra Sound')">Get Best Price</button>
+          <p class="product-meta">Material: Plastic</p>
+          <p class="product-meta">14/35 Mantra</p>
+          <button class="buy-now-button" onclick="openBuyForm('Khatu Shayam Ji Mantra Chanting Box')">Get Best Price</button>
         </div>
       </div>
       <div class="gallery-item">
@@ -222,9 +222,9 @@
             ontouchstart="touchStart(event, this)" 
             ontouchmove="touchMove(event, this)" 
             ontouchend="touchEnd(this)">     
-          <img src="image/IMG1.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
-          <img src="image/IMG2.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
-          <img src="image/IMG3.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/JK-201557969- 5.jpeg.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
+          <img src="image/IMG6.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/JK-201557969- 5.jpeg.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
           <!-- Dot indicators -->
           <div class="dot-container">
             <span class="dot active-dot"></span>
@@ -233,11 +233,11 @@
           </div>
         </div>
         <div class="product-details">
-          <p class="product-name">Lamps With Mantra Sound</p>
+          <p class="product-name">Baba Neem Karoli Mantra Chanting Box</p>
           <p class="product-price">Price = ₹249/Piece</p>
-          <p class="product-meta">Material: Ceramic</p>
-          <p class="product-meta">Size: 8/9/8</p>
-          <button class="buy-now-button" onclick="openBuyForm('Lamps With Mantra Sound')">Get Best Price</button>
+          <p class="product-meta">Material: Plastic</p>
+          <p class="product-meta">14/35 Mantra</p>
+          <button class="buy-now-button" onclick="openBuyForm('Baba Neem Karoli Mantra Chanting Box')">Get Best Price</button>
         </div>
       </div>
     </div>
