--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
             ontouchmove="touchMove(event, this)" 
             ontouchend="touchEnd(this)">     
           <img src="image/IMG14.jpg" alt="Product Image" class="slider-image active" onclick="openLightbox(this)">
-          <img src="image/IMG2.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
-          <img src="image/IMG3.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/IMG13.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
+          <img src="image/IMG14.jpg" alt="Product Image" class="slider-image" onclick="openLightbox(this)">
           <!-- Dot indicators -->
           <div class="dot-container">
             <span class="dot active-dot"></span>
@@ -262,11 +262,11 @@
           </div>
         </div>
         <div class="product-details">
-          <p class="product-name">God Led Lighting Photo</p>
+          <p class="product-name">Lord Shiva Led Lighting Photo</p>
           <p class="product-price">Price = ₹149/Piece</p>
           <p class="product-meta">Material: Plastic</p>
           <p class="product-meta">Lord Shiva Photo</p>
-          <button class="buy-now-button" onclick="openBuyForm('Lamps With Mantra Sound')">Get Best Price</button>
+          <button class="buy-now-button" onclick="openBuyForm('Lord Shiva Led Lighting Photo')">Get Best Price</button>
         </div>
       </div>
       <div class="gallery-item">
@@ -564,9 +564,9 @@
     <h2>Contact Us</h2>
     <div class="contact-details">
       <h3>MEENA ENTERPRISES</h3>
-      <p>NW-80, Vishnu Garden, Khayla,</p>
-      <p>Raghuvir Nagar Road, Near Kaushik Mart,</p>
-      <p>NEW DELHI</p>
+      <p>NW-80, Vishnu Garden,</p>
+      <p>Khayla Industrial Area, Near Kaushik Mart,</p>
+      <p>New Delhi - 110018</p>
       <p><strong>Mobile:</strong> <a href="tel:+918076744871">+91 80767 44871</a></p>
     </div>
   </div>
